fix: make desktop usable on mobile

--- a/frappe/public/scss/desk/sidebar_header.scss
+++ b/frappe/public/scss/desk/sidebar_header.scss
@@ -41,7 +41,7 @@
 	font-weight: 500;
 	line-height: 1;
 	@include truncate();
-	overflow: auto;
+	overflow: unset;
 }
 
 .header-subtitle {
